Fix minor margins and alignment

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -750,9 +750,12 @@ hr {
       width: 17vw;
       font-size: 1.65vw;
       text-align: center;
-      padding: 1.9vw 0;
-      margin-bottom: 2.8vw;
+      padding: 1.5vw 0;
       border-radius: 60px;
+
+      @media screen and (min-width: 575px) {
+        margin-bottom: 2.8vw;
+      }
 
       @media screen and (max-width: 767px) {
         margin-left: auto;
